# rust-racing-game

./: .gitignore  Cargo.toml  README.md
assets/shaders/: shader.wgsl
src/: main.rs
src/core/: audio.rs  ecs.rs  input.rs  mod.rs  physics.rs  renderer.rs
src/game_world/: car.rs  environment.rs  mod.rs  track.rs
src/gameplay/: mod.rs
src/network/: mod.rs
src/ui/: mod.rs
